kubernetes/kustomize/openapi-validator/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openapi-validator
  labels:
    name: openapi-validator
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
